tests/NormalTests/paczka1/small_fuzzy/38385715.err
Error in line 6: S0 S29 10,1
Error in line 9: S0 S29 29,4
Error in line 16: S0 S74 92,4
